:fire: Removido versionamento da pasta dados
Tabelas de dados aeronáuticos fixas foram deletadas da pasta dados, convertidas de xlsx para csv e será versionada na pasta arquivos dentro do módulo de extracao. Será inserida como dependência do pacote extracao simplificando o desenvolvimento, além de versionar corretamente esses arquivos pequenos em formato texto

--- a/nbs/aisweb.ipynb
+++ b/nbs/aisweb.ipynb
@@ -10,11 +10,12 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "import sys\n",
+    "import sys, os\n",
     "from pathlib import Path\n",
     "\n",
     "# Insert in Path Project Directory\n",
-    "sys.path.insert(0, str(Path().cwd().parent))"
+    "sys.path.insert(0, str(Path().cwd().parent))\n",
+    "os.chdir(Path.cwd().parent / 'extracao')"
    ]
   },
   {
@@ -57,10 +58,9 @@
     "from fastcore.utils import store_attr\n",
     "from fastcore.parallel import parallel\n",
     "from dotenv import load_dotenv, find_dotenv\n",
-    "\n",
     "from extracao.icao import map_channels\n",
     "\n",
-    "load_dotenv(find_dotenv())"
+    "load_dotenv(find_dotenv(), override=True)"
    ]
   },
   {
@@ -139,7 +139,6 @@
     "    ):\n",
     "        store_attr()\n",
     "        self.url = URL.format(api_key, api_pass)\n",
-    "        load_dotenv()\n",
     "\n",
     "    def _get_request(self, key, value):\n",
     "        request_url = f\"{self.url}{key}{value}\"\n",
@@ -453,7 +452,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>502</th>\n",
-       "      <td>1054</td>\n",
+       "      <td>1054.0</td>\n",
        "      <td>-22.796666666666667</td>\n",
        "      <td>-43.223888888888894</td>\n",
        "      <td>[DOC] SBGL-NAV, ILS 10 CAT II, Galeão - Antôni...</td>\n",
@@ -474,7 +473,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>505</th>\n",
-       "      <td>1076</td>\n",
+       "      <td>1076.0</td>\n",
        "      <td>-22.804444444444446</td>\n",
        "      <td>-43.26416666666667</td>\n",
        "      <td>[DOC] SBGL-NAV, ILS/DME 28 ILM, Galeão - Antôn...</td>\n",
@@ -499,10 +498,10 @@
        "1       122.8     -29.945555555556     -51.143611111111   \n",
        "2       121.7     -29.945555555556     -51.143611111111   \n",
        "..        ...                  ...                  ...   \n",
-       "502      1054  -22.796666666666667  -43.223888888888894   \n",
+       "502    1054.0  -22.796666666666667  -43.223888888888894   \n",
        "503       991  -22.796666666666667  -43.223888888888894   \n",
        "504     332.9  -22.804444444444446   -43.26416666666667   \n",
-       "505      1076  -22.804444444444446   -43.26416666666667   \n",
+       "505    1076.0  -22.804444444444446   -43.26416666666667   \n",
        "506      1013  -22.804444444444446   -43.26416666666667   \n",
        "\n",
        "                                           Description  \n",
