--- a/nbs/redemet.ipynb
+++ b/nbs/redemet.ipynb
@@ -10,11 +10,12 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "import sys\n",
+    "import sys, os\n",
     "from pathlib import Path\n",
     "\n",
     "# Insert in Path Project Directory\n",
-    "sys.path.insert(0, str(Path().cwd().parent))"
+    "sys.path.insert(0, str(Path().cwd().parent))\n",
+    "os.chdir(Path.cwd().parent / 'extracao')"
    ]
   },
   {
@@ -31,7 +32,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#| export\n",
     "import os\n",
@@ -41,7 +53,7 @@
     "import pandas as pd\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "\n",
-    "load_dotenv(find_dotenv())"
+    "load_dotenv(find_dotenv(), override=True)"
    ]
   },
   {
@@ -388,9 +400,15 @@
     }
    ],
    "source": [
-    "#| eval: false\n",
     "get_redemet()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
