--- a/nbs/updates.ipynb
+++ b/nbs/updates.ipynb
@@ -1455,7 +1455,7 @@
     "    aisw = get_aisw()\n",
     "    aisg = get_aisg()\n",
     "    redemet = get_redemet()\n",
-    "    radares = pd.read_excel(os.environ[\"PATH_RADAR\"])\n",
+    "    radares = pd.read_csv(os.environ[\"PATH_RADAR\"])\n",
     "    for df in [aisw, aisg, redemet, radares]:\n",
     "        icao = merge_on_frequency(icao, df)\n",
     "    icao = icao.astype(\n",
