--- a/nbs/aisgeo.ipynb
+++ b/nbs/aisgeo.ipynb
@@ -4,17 +4,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "#| default_exp aisgeo\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "import sys\n",
+    "import sys, os\n",
     "from pathlib import Path\n",
     "\n",
     "# Insert in Path Project Directory\n",
-    "sys.path.insert(0, str(Path().cwd().parent))"
+    "sys.path.insert(0, str(Path().cwd().parent))\n",
+    "os.chdir(Path.cwd().parent / 'extracao')"
    ]
   },
   {
@@ -48,12 +58,11 @@
     "import os\n",
     "import json\n",
     "from urllib.request import urlopen\n",
-    "import xml.etree.ElementTree as ET\n",
-    "from typing import Iterable\n",
-    "from dotenv import load_dotenv\n",
+    "from typing import List\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
     "import pandas as pd\n",
     "\n",
-    "load_dotenv()"
+    "load_dotenv(find_dotenv(), override=True)"
    ]
   },
   {
@@ -109,7 +118,7 @@
     "    \"properties.tipo\",\n",
     "    \"properties.txtname\",\n",
     "    \"Channel\",\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -135,7 +144,7 @@
     "            result = freq * 1000\n",
     "        case _:\n",
     "            result = -1\n",
-    "    return result"
+    "    return result\n"
    ]
   },
   {
@@ -147,13 +156,11 @@
     "#| export\n",
     "def _process_frequency(\n",
     "    df: pd.DataFrame,  # Dataframe com os dados\n",
-    "    cols: Iterable[str],  # Subconjunto de Colunas relevantes do DataFrame\n",
+    "    cols: List[str],  # Subconjunto de Colunas relevantes do DataFrame\n",
     ") -> pd.DataFrame:  # Dataframe com os dados de frequência devidamente processados\n",
     "    if cols == COLS_DME:\n",
-    "        df_channels = pd.read_excel(\n",
-    "            os.environ[\"PATH_CHANNELS\"], engine=\"openpyxl\", dtype=\"string\"\n",
-    "        )\n",
-    "        df.dropna(subset=[cols[0]], inplace=True)\n",
+    "        df_channels = pd.read_csv(os.environ[\"PATH_CHANNELS\"], dtype=\"string\")\n",
+    "        df = df.dropna(subset=[cols[0]])\n",
     "        df[\"Channel\"] = df[cols[0]].astype(\"int\").astype(\"string\") + df[cols[1]]\n",
     "        df[\"Frequency\"] = -1.0\n",
     "\n",
@@ -193,7 +200,7 @@
     "            cols[2]: \"Latitude\",\n",
     "            cols[3]: \"Longitude\",\n",
     "        }\n",
-    "    )"
+    "    )\n"
    ]
   },
   {
@@ -205,8 +212,10 @@
     "#|export\n",
     "def get_geodf(\n",
     "    link: str,  # Link para a requisição das estações VOR do GEOAISWEB\n",
-    "    cols: Iterable[str],  # Subconjunto de Colunas relevantes do DataFrame\n",
-    ") -> pd.DataFrame:  # DataFrame com frequências, coordenadas e descrição das estações VOR\n",
+    "    cols: List[str],  # Subconjunto de Colunas relevantes do DataFrame\n",
+    ") -> (\n",
+    "    pd.DataFrame\n",
+    "):  # DataFrame com frequências, coordenadas e descrição das estações VOR\n",
     "    # sourcery skip: use-fstring-for-concatenation\n",
     "    \"\"\"Faz a requisição do `link`, processa o json e o retorna como Dataframe\"\"\"\n",
     "    response = urlopen(link)\n",
@@ -222,7 +231,7 @@
     "        data_json[\"features\"],\n",
     "    ).filter(cols, axis=1)\n",
     "    df = _process_frequency(df, cols)\n",
-    "    return _filter_df(df, cols)"
+    "    return _filter_df(df, cols)\n"
    ]
   },
   {
@@ -847,6 +856,24 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rsilva\\AppData\\Local\\Temp\\2\\ipykernel_7420\\3107854738.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[\"Channel\"] = df[cols[0]].astype(\"int\").astype(\"string\") + df[cols[1]]\n",
+      "C:\\Users\\rsilva\\AppData\\Local\\Temp\\2\\ipykernel_7420\\3107854738.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[\"Frequency\"] = -1.0\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -997,9 +1024,7 @@
     "            [LINK_NDB, LINK_VOR, LINK_DME], [COLS_NDB, COLS_VOR, COLS_DME]\n",
     "        )\n",
     "    )\n",
-    "    for c in df.columns:\n",
-    "        df[c] = df[c].astype(\"string\")\n",
-    "    return df"
+    "    return df.astype(\"string\")"
    ]
   }
  ],
