--- a/nbs/icao.ipynb
+++ b/nbs/icao.ipynb
@@ -10,11 +10,12 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "import sys\n",
+    "import sys,os\n",
     "from pathlib import Path\n",
     "\n",
     "# Insert in Path Project Directory\n",
-    "sys.path.insert(0, str(Path().cwd().parent))"
+    "sys.path.insert(0, str(Path().cwd().parent))\n",
+    "os.chdir(Path.cwd().parent / 'extracao')"
    ]
   },
   {
@@ -48,10 +49,10 @@
     "import os\n",
     "from typing import Iterable\n",
     "import pandas as pd\n",
-    "from dotenv import load_dotenv\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
     "from fastcore.test import test_close\n",
     "\n",
-    "load_dotenv()"
+    "load_dotenv(find_dotenv(), override=True)"
    ]
   },
   {
@@ -136,7 +137,7 @@
     ") -> pd.DataFrame:  # Dataframe formatado\n",
     "    # sourcery skip: use-fstring-for-concatenation\n",
     "    \"\"\"Lê o DataFrame no caminho `path`, filtra as colunas `usecols` e o retorna formatado\"\"\"\n",
-    "    df = pd.read_excel(path, engine=\"openpyxl\", dtype=\"string\")[usecols]\n",
+    "    df = pd.read_csv(path, dtype=\"string\")[usecols]\n",
     "    df.columns = COLS_NAV\n",
     "    df[\"Latitude\"] = df.apply(\n",
     "        lambda x: convert_latitude(x[\"Latitude\"], x[\"NS\"]), axis=1\n",
@@ -160,7 +161,7 @@
     "    origem: str,  # Descrição da emissão a ser substituída\n",
     ") -> pd.DataFrame:\n",
     "    \"\"\"Mapeia os canais contidos em `df` e adiciona os registros ILS/DME caso houver\"\"\"\n",
-    "    chs = pd.read_excel(os.environ[\"PATH_CHANNELS\"], engine=\"openpyxl\", dtype=\"string\")\n",
+    "    chs = pd.read_csv(os.environ[\"PATH_CHANNELS\"], dtype=\"string\")\n",
     "    for row in df[df.Description.str.contains(\"ILS|DME\")].itertuples():\n",
     "        if not (ch := chs[(chs.VOR_ILSloc == row.Frequency)]).empty:\n",
     "            for i, c in enumerate(ch.values[0][2:]):\n",
@@ -194,8 +195,7 @@
     "    df = pd.concat(\n",
     "        _read_df(p, c) for p, c in zip([path_nav, path_com], [COLS_NAV, COLS_COM])\n",
     "    )\n",
-    "    for c in df.columns:\n",
-    "        df[c] = df[c].astype(\"string\")\n",
+    "    df = df.astype(\"string\")\n",
     "    return map_channels(df, \"ICAO\")"
    ]
   },
@@ -262,7 +262,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>112</td>\n",
+       "      <td>112.0</td>\n",
        "      <td>-10.983333333333333</td>\n",
        "      <td>-37.06666666666667</td>\n",
        "      <td>[ICAO] VOR/DME, ARACAJU STA. MARIA</td>\n",
@@ -283,7 +283,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2627</th>\n",
-       "      <td>1082</td>\n",
+       "      <td>1082.0</td>\n",
        "      <td>-12.7</td>\n",
        "      <td>-60.083333333333336</td>\n",
        "      <td>[DOC] VOR/DME, VILHENA (Airbone DME)</td>\n",
@@ -297,7 +297,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2629</th>\n",
-       "      <td>1126</td>\n",
+       "      <td>1126.0</td>\n",
        "      <td>-20.25</td>\n",
        "      <td>-40.28333333333333</td>\n",
        "      <td>[DOC] VOR/DME, VITORIA GOIABEIRAS (Airbone DME)</td>\n",
@@ -320,12 +320,12 @@
        "1        113.2                -3.25               -52.25   \n",
        "2        117.5   -4.183333333333334   -69.93333333333334   \n",
        "3        115.4               -16.25                -49.0   \n",
-       "4          112  -10.983333333333333   -37.06666666666667   \n",
+       "4        112.0  -10.983333333333333   -37.06666666666667   \n",
        "...        ...                  ...                  ...   \n",
        "2626      1176  -20.766666666666666               -51.55   \n",
-       "2627      1082                -12.7  -60.083333333333336   \n",
+       "2627    1082.0                -12.7  -60.083333333333336   \n",
        "2628      1019                -12.7  -60.083333333333336   \n",
-       "2629      1126               -20.25   -40.28333333333333   \n",
+       "2629    1126.0               -20.25   -40.28333333333333   \n",
        "2630      1189               -20.25   -40.28333333333333   \n",
        "\n",
        "                                            Description  \n",
