♻️ Criado pacote aero para encapsular extração aeronáutica.

--- a/nbs/aisweb.ipynb
+++ b/nbs/aisweb.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp aisweb\n",
+    "#| default_exp aero.aisweb\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -546,5 +546,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
