--- a/nbs/aisgeo.ipynb
+++ b/nbs/aisgeo.ipynb
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "#| default_exp aisgeo\n",
+    "#| default_exp aero.aisgeo\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -1030,11 +1030,11 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('db')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
