--- a/nbs/redemet.ipynb
+++ b/nbs/redemet.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp redemet\n",
+    "#| default_exp aero.redemet\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -413,11 +413,11 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "db",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
