:art: Arquivos fixos aeronáuticos exportados para o submódulo aero
Adicionalmente foi adicionado um drop_duplicates nas APIs do módulo aero

--- a/nbs/aisgeo.ipynb
+++ b/nbs/aisgeo.ipynb
@@ -118,7 +118,9 @@
     "    \"properties.tipo\",\n",
     "    \"properties.txtname\",\n",
     "    \"Channel\",\n",
-    ")\n"
+    ")\n",
+    "\n",
+    "UNIQUE_COLS = ['Frequency', 'Latitude', 'Longitude']"
    ]
   },
   {
@@ -1024,7 +1026,7 @@
     "            [LINK_NDB, LINK_VOR, LINK_DME], [COLS_NDB, COLS_VOR, COLS_DME]\n",
     "        )\n",
     "    )\n",
-    "    return df.astype(\"string\")"
+    "    return df.astype(\"string\").drop_duplicates(UNIQUE_COLS, ignore_index=True)"
    ]
   }
  ],
