--- a/nbs/aisweb.ipynb
+++ b/nbs/aisweb.ipynb
@@ -89,7 +89,8 @@
     "SIGLA_AERO = [\"MIL\", \"PRIV/PUB\", \"PUB\", \"PUB/MIL\", \"PUB/REST\"]\n",
     "URL = \"http://aisweb.decea.gov.br/api/?apiKey={}&apiPass={}&area=rotaer&rowend=10000\"\n",
     "TYPE = [\"COM\", \"NAV\"]\n",
-    "COLUMNS = [\"Frequency\", \"Latitude\", \"Longitude\", \"Description\"]\n"
+    "COLUMNS = [\"Frequency\", \"Latitude\", \"Longitude\", \"Description\"]\n",
+    "UNIQUE_COLS = ['Frequency', 'Latitude', 'Longitude']"
    ]
   },
   {
@@ -285,7 +286,7 @@
     "            progress=True,\n",
     "        )\n",
     "        df = pd.concat(records).astype('string')\n",
-    "        return map_channels(df, \"AISW\")\n"
+    "        return map_channels(df, \"AISW\").drop_duplicates(UNIQUE_COLS, ignore_index=True)\n"
    ]
   },
   {
