--- a/nbs/icao.ipynb
+++ b/nbs/icao.ipynb
@@ -79,7 +79,8 @@
    "source": [
     "#| export\n",
     "COLS_NAV = [\"Frequency\", \"Latitude\", \"Longitude\", \"Facility\", \"Location\", \"NS\", \"WE\"]\n",
-    "COLS_COM = [\"Frequency\", \"CoordLat\", \"CoordLong\", \"DOC\", \"Location\", \"NS\", \"WE\"]"
+    "COLS_COM = [\"Frequency\", \"CoordLat\", \"CoordLong\", \"DOC\", \"Location\", \"NS\", \"WE\"]\n",
+    "UNIQUE_COLS = ['Frequency', 'Latitude', 'Longitude']"
    ]
   },
   {
@@ -196,7 +197,7 @@
     "        _read_df(p, c) for p, c in zip([path_nav, path_com], [COLS_NAV, COLS_COM])\n",
     "    )\n",
     "    df = df.astype(\"string\")\n",
-    "    return map_channels(df, \"ICAO\")"
+    "    return map_channels(df, \"ICAO\").drop_duplicates(UNIQUE_COLS, ignore_index=True)"
    ]
   },
   {
