--- a/nbs/redemet.ipynb
+++ b/nbs/redemet.ipynb
@@ -79,7 +79,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "URL = \"https://api-redemet.decea.mil.br/produtos/radar/maxcappi?api_key={}&{}\"\n"
+    "URL = \"https://api-redemet.decea.mil.br/produtos/radar/maxcappi?api_key={}&{}\"\n",
+    "UNIQUE_COLS = ['Frequency', 'Latitude', 'Longitude']"
    ]
   },
   {
@@ -114,7 +115,8 @@
     "    df = df[[\"Frequency\", \"lat_center\", \"lon_center\", \"Description\"]].astype(\n",
     "        \"string\", copy=False\n",
     "    )\n",
-    "    return df.rename(columns={\"lat_center\": \"Latitude\", \"lon_center\": \"Longitude\"})"
+    "    df = df.rename(columns={\"lat_center\": \"Latitude\", \"lon_center\": \"Longitude\"})\n",
+    "    return df.drop_duplicates(UNIQUE_COLS, ignore_index=True)"
    ]
   },
   {
