:poop: Testando implementação vetorial de mesclagem

--- a/nbs/aisweb.ipynb
+++ b/nbs/aisweb.ipynb
@@ -58,7 +58,7 @@
     "from fastcore.utils import store_attr\n",
     "from fastcore.parallel import parallel\n",
     "from dotenv import load_dotenv, find_dotenv\n",
-    "from extracao.icao import map_channels\n",
+    "from extracao.aero.icao import map_channels\n",
     "\n",
     "load_dotenv(find_dotenv(), override=True)"
    ]
