--- a/nbs/aisgeo.ipynb
+++ b/nbs/aisgeo.ipynb
@@ -1035,6 +1035,10 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
