--- a/nbs/reading.ipynb
+++ b/nbs/reading.ipynb
@@ -66,10 +66,10 @@
     "    update_aero,\n",
     ")\n",
     "\n",
-    "from extracao.icao import get_icao\n",
-    "from extracao.aisgeo import get_aisg\n",
-    "from extracao.aisweb import get_aisw\n",
-    "from extracao.redemet import get_redemet\n",
+    "from extracao.aero.icao import get_icao\n",
+    "from extracao.aero.aisgeo import get_aisg\n",
+    "from extracao.aero.aisweb import get_aisw\n",
+    "from extracao.aero.redemet import get_redemet\n",
     "from extracao.format import _read_df\n",
     "\n",
     "load_dotenv(find_dotenv())"
@@ -538,6 +538,10 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
