:rewind: Revertendo função merge_on_frequency
A lógica vetorial está incompleta, retornado registros duplicados. A implementação anterior foi restaurada

--- a/nbs/format.ipynb
+++ b/nbs/format.ipynb
@@ -240,69 +240,40 @@
     "    return geodesic((row[0], row[1]), (row[2], row[3])).km\n",
     "\n",
     "\n",
-    "def merge_on_frequency(\n",
-    "    df_left: pd.DataFrame,  # DataFrame da esquerda a ser mesclado\n",
-    "    df_right: pd.DataFrame,  # DataFrame da direira a ser mesclado\n",
-    "    on: str = \"Frequency\",  # Coluna usada como chave de mesclagem\n",
-    "    coords: Tuple[str] = (\"Latitude\", \"Longitude\"),\n",
-    "    description: str = \"Description\",\n",
-    "    suffixes: Tuple[str] = (\"_x\", \"_y\"),  # Sufixo para as colunas que foram criadas\n",
-    ") -> pd.DataFrame:  # DataFrame resultante da mesclagem\n",
-    "    df: pd.DataFrame = pd.merge(\n",
-    "        df_left.astype(\"string\"),\n",
-    "        df_right.astype(\"string\"),\n",
-    "        on=on,\n",
-    "        how=\"outer\",\n",
-    "        suffixes=suffixes,\n",
-    "        indicator=True,\n",
-    "        copy=False,\n",
-    "    )\n",
-    "\n",
-    "    x, y = suffixes\n",
-    "    lat, long = coords\n",
-    "\n",
-    "    left_cols: List[str] = [c for c in df.columns if y not in c]\n",
-    "\n",
-    "    right_cols: List[str] = [c for c in df.columns if x not in c]\n",
-    "\n",
-    "    left = df._merge == \"left_only\"\n",
-    "    right = df._merge == \"right_only\"\n",
-    "    both = df._merge == \"both\"\n",
-    "\n",
-    "    only_left = df.loc[left, left_cols].drop_duplicates().reset_index(drop=True)\n",
-    "    only_left.columns = [c.removesuffix(x) for c in left_cols]\n",
-    "\n",
-    "    only_right = df.loc[right, right_cols].drop_duplicates().reset_index(drop=True)\n",
-    "    only_right.columns = [c.removesuffix(y) for c in right_cols]\n",
-    "\n",
-    "    both_columns = [f\"{lat}{x}\", f\"{long}{x}\", f\"{lat}{y}\", f\"{long}{y}\"]\n",
-    "\n",
-    "    df.loc[both, \"Distance\"] = df.loc[both, both_columns].apply(get_km_distance, axis=1)\n",
-    "\n",
-    "    close = df.loc[both, \"Distance\"] <= MAX_DIST\n",
-    "    df_close = df.loc[(both & close)].drop_duplicates().reset_index(drop=True)\n",
-    "    df_close[f\"{description}{x}\"] = (\n",
-    "        df_close[f\"{description}{x}\"] + \" | \" + df_close[f\"{description}{y}\"]\n",
-    "    )\n",
-    "    df_close = df_close[left_cols]\n",
-    "    df_close.columns = only_left.columns\n",
-    "\n",
-    "    df_far_left = (\n",
-    "        df.loc[(both & ~close), left_cols].drop_duplicates().reset_index(drop=True)\n",
-    "    )\n",
-    "    df_far_left.columns = only_left.columns\n",
-    "\n",
-    "    df_far_right = (\n",
-    "        df.loc[(both & ~close), right_cols].drop_duplicates().reset_index(drop=True)\n",
-    "    )\n",
-    "    df_far_right.columns = only_right.columns\n",
-    "\n",
-    "    merged_df = pd.concat(\n",
-    "        [df_left, df_right, df_close, df_far_right, df_far_left], ignore_index=True\n",
-    "    )\n",
-    "    merged_df.drop(columns=[\"_merge\"], inplace=True)\n",
-    "    \n",
-    "    return merged_df.astype('string')"
+    "def merge_on_frequency(df_left, df_right):\n",
+    "    \"\"\"Mescla os registros dos DataFrames `df_left` e `df_right` que estão a uma distância menor que MAX_DIST\"\"\"\n",
+    "    df1 = df_left.copy().reset_index(drop=True)\n",
+    "    df2 = df_right.copy().reset_index(drop=True)\n",
+    "    columns = [\"Frequency\", \"Latitude\", \"Longitude\"]\n",
+    "    for c in columns:\n",
+    "        df1[c] = df1[c].astype(\"float\")\n",
+    "        df2[c] = df2[c].astype(\"float\")\n",
+    "    df1.sort_values(columns, inplace=True)\n",
+    "    df2.sort_values(columns, inplace=True)\n",
+    "    with Progress(transient=True, refresh_per_second=2) as progress:\n",
+    "        task_left = progress.add_task(\n",
+    "            \"[red]Iterando Tabela Principal...\", total=len(df1)\n",
+    "        )\n",
+    "        for left in df1.itertuples():\n",
+    "            for right in df2[np.isclose(df2.Frequency, left.Frequency)].itertuples():\n",
+    "                if (\n",
+    "                    geodesic(\n",
+    "                        (left.Latitude, left.Longitude),\n",
+    "                        (right.Latitude, right.Longitude),\n",
+    "                    ).km\n",
+    "                    <= MAX_DIST\n",
+    "                ):\n",
+    "                    df1.loc[\n",
+    "                        left.Index, \"Description\"\n",
+    "                    ] = f\"{left.Description} | {right.Description}\"\n",
+    "                    df2 = df2.drop(right.Index)\n",
+    "                    break\n",
+    "            progress.update(\n",
+    "                task_left,\n",
+    "                advance=1,\n",
+    "                description=f\"[green] Comparando Frequências {left.Frequency}MHz\",\n",
+    "            )\n",
+    "        return pd.concat([df1, df2], ignore_index=True).astype('string')\n"
    ]
   },
   {
