:zap: Implementação vetorial da função merge_on_frequency
Ganho de performance de 5400%, de 17min a 18 min para 20s a 40s

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -78,8 +78,15 @@
    "source": [
     "from fastcore.xtras import Path\n",
     "from extracao.main import get_db\n",
-    "from nbdev.showdoc import *\n",
-    "\n",
+    "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pasta = Path.cwd().parent / 'dados'\n",
     "show_doc(get_db)"
    ]
