:bug: Eliminação de registros duplicados
Para que a validação da mesclagem funcione corretamente, é preciso eliminar registros duplicados antes de realizar o pd.merge

--- a/nbs/aisgeo.ipynb
+++ b/nbs/aisgeo.ipynb
@@ -61,6 +61,7 @@
     "from typing import List\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "import pandas as pd\n",
+    "from pathlib import Path\n",
     "\n",
     "load_dotenv(find_dotenv(), override=True)"
    ]
@@ -161,7 +162,7 @@
     "    cols: List[str],  # Subconjunto de Colunas relevantes do DataFrame\n",
     ") -> pd.DataFrame:  # Dataframe com os dados de frequência devidamente processados\n",
     "    if cols == COLS_DME:\n",
-    "        df_channels = pd.read_csv(os.environ[\"PATH_CHANNELS\"], dtype=\"string\")\n",
+    "        df_channels = pd.read_csv(f'{Path(__file__).parent}/{os.environ[\"PATH_CHANNELS\"]}', dtype=\"string\")\n",
     "        df = df.dropna(subset=[cols[0]])\n",
     "        df[\"Channel\"] = df[cols[0]].astype(\"int\").astype(\"string\") + df[cols[1]]\n",
     "        df[\"Frequency\"] = -1.0\n",
@@ -389,6 +390,7 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "get_geodf(LINK_VOR, COLS_VOR)"
    ]
   },
@@ -849,6 +851,7 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "get_geodf(LINK_NDB, COLS_NDB)"
    ]
   },
@@ -1008,6 +1011,7 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "get_geodf(LINK_DME, COLS_DME)"
    ]
   },
