--- a/nbs/format.ipynb
+++ b/nbs/format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "True"
       ]
      },
-     "execution_count": null,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,9 +253,11 @@
     "    \"\"\"Mescla os dataframes baseados na frequência\n",
     "    É assumido que as colunas de ambos uma é subconjunto ou idêntica à outra, caso contrário os filtros não irão funcionar como esperado\n",
     "    \"\"\"\n",
+    "    df_left = df_left.astype(\"string\").drop_duplicates(ignore_index=True)\n",
+    "    df_right = df_right.astype(\"string\").drop_duplicates(ignore_index=True)\n",
     "    df: pd.DataFrame = pd.merge(\n",
-    "        df_left.astype(\"string\"),\n",
-    "        df_right.astype(\"string\"),\n",
+    "        df_left,\n",
+    "        df_right,\n",
     "        on=on,\n",
     "        how=\"outer\",\n",
     "        suffixes=suffixes,\n",
@@ -274,14 +276,17 @@
     "    left_cols: List[str] = [c for c in df.columns if y not in c]\n",
     "    right_cols: List[str] = [c for c in df.columns if x not in c]\n",
     "\n",
-    "    only_left = df.loc[left, left_cols].drop_duplicates(ignore_index=True)\n",
+    "    only_left = df.loc[left, left_cols].drop_duplicates(subset=left_cols, ignore_index=True)\n",
     "    only_left.columns = [c.removesuffix(x) for c in left_cols]\n",
     "\n",
-    "    only_right = df.loc[right, right_cols].drop_duplicates(ignore_index=True)\n",
+    "    only_right = df.loc[right, right_cols].drop_duplicates(subset=right_cols, ignore_index=True)\n",
     "    only_right.columns = [c.removesuffix(y) for c in right_cols]\n",
     "\n",
-    "    inner_left = len(df_left) - len(only_left)\n",
-    "    inner_right = len(df_right) - len(only_right)\n",
+    "    intersection_left = len(df_left) - len(only_left)\n",
+    "    intersection_right = len(df_right) - len(only_right)\n",
+    "\n",
+    "    if not intersection_left or not intersection_right:\n",
+    "        return pd.concat([df_left, df_right], ignore_index=True)\n",
     "\n",
     "    both_columns = [f\"{lat}{x}\", f\"{long}{x}\", f\"{lat}{y}\", f\"{long}{y}\"]\n",
     "    df.loc[both, \"Distance\"] = df.loc[both, both_columns].apply(get_km_distance, axis=1)\n",
@@ -289,16 +294,16 @@
     "    df_both = df[both].sort_values(\"Distance\", ignore_index=True)\n",
     "\n",
     "    filter_left_cols = df_both.columns[:len(df_left.columns)].to_list()\n",
-    "    filter_right_cols = ['Frequency'] + df_both.columns[len(df_left.columns):-1].to_list() # the -1 is to eliminate the distance\n",
+    "    filter_right_cols = listify(on) + df_both.columns[len(df_left.columns):-1].to_list() # the -1 is to eliminate the distance\n",
     "   \n",
     "    df_both_left = df_both.groupby(filter_left_cols, as_index=False).first()\n",
     "    df_both_right = df_both.groupby(filter_right_cols, as_index=False).first()\n",
     "\n",
-    "    assert len(df_both_left) == inner_left, f\"Error: {len(df_both_left)}!= {inner_left}\"\n",
+    "    assert len(df_both_left) == intersection_left, f\"O Agrupamento por colunas únicas não tem o comprimento esperado: {len(df_both_left)}!= {intersection_left}\"\n",
     "    \n",
     "    assert (\n",
-    "        len(df_both_right) == inner_right\n",
-    "    ), f\"Error: {len(df_both_right)}!= {inner_right}\"\n",
+    "        len(df_both_right) == intersection_right\n",
+    "    ), f\"Error: {len(df_both_right)}!= {intersection_right}\"\n",
     "\n",
     "    df_both_far_left = df_both_left[df_both_left.Distance > MAX_DIST]\n",
     "    df_both_far_right = df_both_right[df_both_right.Distance > MAX_DIST]\n",
@@ -400,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,34 +415,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_left = _filter_matlab(pd.read_parquet(folder / \"base.parquet.gzip\")).drop_duplicates(\n",
-    "    ignore_index=True\n",
-    ")"
+    "df_left = _filter_matlab(pd.read_parquet(folder / \"base.parquet.gzip\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_right = pd.read_parquet(folder / \"aero.parquet.gzip\").drop_duplicates(\n",
-    "    ignore_index=True\n",
-    ")"
+    "df_right = pd.read_parquet(folder / \"aero.parquet.gzip\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = merge_on_frequency(df_left, df_right)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -445,6 +453,18 @@
    "display_name": "db",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
