--- a/nbs/icao.ipynb
+++ b/nbs/icao.ipynb
@@ -47,6 +47,7 @@
    "source": [
     "#| export\n",
     "import os\n",
+    "from pathlib import Path\n",
     "from typing import Iterable\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv, find_dotenv\n",
@@ -162,7 +163,7 @@
     "    origem: str,  # Descrição da emissão a ser substituída\n",
     ") -> pd.DataFrame:\n",
     "    \"\"\"Mapeia os canais contidos em `df` e adiciona os registros ILS/DME caso houver\"\"\"\n",
-    "    chs = pd.read_csv(os.environ[\"PATH_CHANNELS\"], dtype=\"string\")\n",
+    "    chs = pd.read_csv(f'{Path(__file__).resolve().parent}/{os.environ[\"PATH_CHANNELS\"]}', dtype=\"string\")\n",
     "    for row in df[df.Description.str.contains(\"ILS|DME\")].itertuples():\n",
     "        if not (ch := chs[(chs.VOR_ILSloc == row.Frequency)]).empty:\n",
     "            for i, c in enumerate(ch.values[0][2:]):\n",
@@ -188,11 +189,10 @@
    "outputs": [],
    "source": [
     "#| export    \n",
-    "def get_icao(\n",
-    "    path_nav: str = os.environ[\"PATH_NAV\"],  # Caminho para o arquivo NAV\n",
-    "    path_com: str = os.environ[\"PATH_COM\"],  # Caminho para o arquivo COM\n",
-    ") -> pd.DataFrame:  # DataFrame com frequências, coordenadas e descrição das estações\n",
+    "def get_icao() -> pd.DataFrame:  # DataFrame com frequências, coordenadas e descrição das estações\n",
     "    \"\"\"Lê, concatena e pós-processa os arquivos do ICAO\"\"\"\n",
+    "    path_nav: str = f'{Path(__file__).resolve().parent}/{os.environ[\"PATH_NAV\"]}'\n",
+    "    path_com: str = f'{Path(__file__).resolve().parent}/{os.environ[\"PATH_COM\"]}'\n",
     "    df = pd.concat(\n",
     "        _read_df(p, c) for p, c in zip([path_nav, path_com], [COLS_NAV, COLS_COM])\n",
     "    )\n",
@@ -351,6 +351,7 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "get_icao()"
    ]
   }
