:monocle_face: Blocos de Frequências mapeado com sucesso - As emissões são agregadas por ['UF', 'Código_Município', 'Fistel', 'Frequência_Central', 'Largura_Emissão(kHz)', 'Classe_Emissão'] O total de estações agregadas é anotado na coluna Multiplicidade
- Dada Frequência Central e Largura de Banda extraída da string Canalização são criadas 2 colunas: Início_Canal e Fim_Canal para cada registro
    - São ignorados os dados de Frequência Inicial e Frequência Final da base, menos de 30% coincide com esse início e fim de canal calculado à partir da Frequência Central e Largura de Banda

Para o mapeamento das emissões com os Canais, as estações agregadas são novamente agrupadas por canal.

- Esse canal é cruzado com o arquivo de canalização planilhado à partir da resolução.
- São definidos os blocos que correspondem à emissão: Blocos_Downlink à partir desses blocos são definidos os respectivos blocos Blocos_Uplink. É marcado na coluna Intervalo_Canal a qual intervalo corresponde o canal da estação, neste caso Downlink
    - Caso não seja identificado nenhum bloco de Downlink no canal, é verificado se o mesmo não corresponde à um ou mais blocos de Uplink, caso afirmativo é marcado na coluna Intervalo_Canal a sigla Uplink
    - Se o canal não corresponder à nenhum intervalo de Downlink ou Uplink a coluna Intervalo_Canal é marcada como Inválido
- Antes da agregação anterior, os dados são ordenados numericamente pelo número de estação, assim caso uma emissão agregar mais de 1 item, irá aparecer a estação com número menor de um conjunto de estações agregadas

--- a/nbs/updates.ipynb
+++ b/nbs/updates.ipynb
@@ -808,11 +808,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MOSAICO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def split_designacao(df: pd.DataFrame)->pd.DataFrame:\n",
+    "    \"\"\"Parse a bandwidth string to extract the numerical component and a character class\"\"\"\n",
+    "    df[\"DesignacaoEmissao\"] = df.DesignacaoEmissao.str.replace(\",\", \" \").str.strip().str.upper()\n",
+    "    df[\"DesignacaoEmissao\"] = df.DesignacaoEmissao.str.split(\" \")\n",
+    "    df = df.explode(\"DesignacaoEmissao\")\n",
+    "    df = df[df.DesignacaoEmissao != \"/\"]  # Removes empty rows\n",
+    "    df[[\"Largura_Emissão(kHz)\", \"Classe_Emissão\"]] = df.DesignacaoEmissao.apply(parse_bw).tolist()\n",
+    "    df[[\"Largura_Emissão(kHz)\", \"Classe_Emissão\"]] = df[[\"Largura_Emissão(kHz)\", \"Classe_Emissão\"]].astype('string')\n",
+    "    return df.drop(\"DesignacaoEmissao\", axis=1)\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MOSAICO - SRD"
+    "### SRD"
    ]
   },
   {
@@ -1135,7 +1160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MOSAICO - TELECOM"
+    "### TELECOM"
    ]
   },
   {
@@ -1160,17 +1185,7 @@
     "        \"[red] :warning: Executando a query na base licenciamento do Mosaico, processo demorado! :warning:\"\n",
     "    )\n",
     "    df = pd.DataFrame(list(query), columns=COLS_TELECOM.keys(), dtype=\"string\")\n",
-    "    path_cache = Path(f\"{folder}/telecom_raw.parquet.gzip\")\n",
-    "    path_out = Path(f\"{folder}/telecom.parquet.gzip\")\n",
-    "    if path_cache.is_file():\n",
-    "        cache_df = pd.read_parquet(path_cache)\n",
-    "        if df.equals(cache_df) and path_out.is_file():\n",
-    "            del df\n",
-    "            gc.collect()\n",
-    "            return pd.read_parquet(path_out)\n",
-    "    df.to_parquet(path_cache, compression=\"gzip\", index=False)\n",
     "    return _process_telecom(df, folder)\n",
-    "\n",
     "\n",
     "def _process_telecom(\n",
     "    df: pd.DataFrame,  # Dataframe não processado de dados do Mosaico\n",
@@ -1179,17 +1194,7 @@
     "    \"\"\"Formata e pós-processa e mescla os dados de Telecomunicações do Mosaico\"\"\"\n",
     "    # df.drop(\"_id\", axis=1, inplace=True)\n",
     "    df.rename(COLS_TELECOM, axis=1, inplace=True)\n",
-    "    df[\"Designacao_Emissão\"] = df.Designacao_Emissão.str.replace(\",\", \" \")\n",
-    "    df[\"Designacao_Emissão\"] = (\n",
-    "        df.Designacao_Emissão.str.strip().str.lstrip().str.rstrip().str.upper()\n",
-    "    )\n",
-    "    df[\"Designacao_Emissão\"] = df.Designacao_Emissão.str.split(\" \")\n",
-    "    df = df.explode(\"Designacao_Emissão\", ignore_index=True)\n",
-    "    df.loc[df.Designacao_Emissão == \"/\", \"Designacao_Emissão\"] = \"\"\n",
-    "    df.loc[:, [\"Largura_Emissão(kHz)\", \"Classe_Emissão\"]] = df.Designacao_Emissão.apply(\n",
-    "        parse_bw\n",
-    "    ).tolist()\n",
-    "    df.drop(\"Designacao_Emissão\", axis=1, inplace=True)\n",
+    "    df = split_designacao(df)\n",
     "    subset = [\n",
     "        \"Frequência\",\n",
     "        \"Entidade\",\n",
